Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-19811

QCalendarWidget doesn't use correct firstDayOfWeek according to current locale

    XMLWordPrintable

Details

    • I4441bf9ffd52213ef622a4a7f498530b7cc9e110

    Description

      The calendar opened from QDateTimeEdit displays with first day of week set to Sunday after setting the locale to French or German (e.g. QLocale::setDefault("fr_FR")). The first day of week should be Monday.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            mitch_curtis Mitch Curtis
            pdoykov Plamen Doykov
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes